:lipstick: Fix bug where line height too big on collaborator dropdown

--- a/src/app/onion/learning-object-builder/components/user-dropdown/user-dropdown.component.scss
+++ b/src/app/onion/learning-object-builder/components/user-dropdown/user-dropdown.component.scss
@@ -42,7 +42,6 @@ $light-blue-gradient: linear-gradient(45deg, saturate(darken($bright-blue, 10), 
 
 .user-dropdown__list-item {
   height: 40px;
-  line-height: 40px;
   background: white;
   color: $dark-text;
   display: flex;
